# stonks

./: main.py  model.py  model.safetensors  parser_yandex.py  pyproject.toml  requirements.txt  ria_news_content_only.csv
Stonks/: main.py  model.py
