[tool.poetry]
name = "stonks"
version = "0.1.0"
description = ""
authors = ["Marsvest <alajh.akbar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.67.0"
torch = "^2.5.1"
transformers = "^4.46.2"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
